--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -23,7 +23,7 @@
 .details > a {
   color: white;
   font-size: 20px;
-  width: 60%;
+  width: 65%;
   font-weight: bold;
   text-decoration: none;
 }
@@ -42,7 +42,15 @@
     padding: 70px;
   }
   .details {
-    width: 650px;
+    width: 100%;
+  }
+  .details > h3 {
+    width: 50%;
+    margin-right: 0;
+  }
+  .details > h4,
+  .details > a {
+    width: 50%;
   }
 }
 @media only screen and (max-width: 450px) {
